setting: 인프라 ci/cd 및 로그 설정

--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,6 @@ Temporary Items
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -143,3 +142,6 @@ HELP.md
 .env.prod
 
 application-env.yaml
+.kotlin
+.claude
+.idea
