--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 services:
-  postgres:
-    image: 'postgres:latest'
-    env_file:
-      - .env.local
-    ports:
-      - '5432'
+    postgres:
+        image: 'postgres:16-alpine'
+        env_file:
+            - .env.local
+        ports:
+            - '5432:5432'
