--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,10 +1,9 @@
 spring:
     datasource:
-        url: jdbc:postgresql://localhost:5432/${POSTGRES_DB}
-        username: ${POSTGRES_USER}
-        password: ${POSTGRES_PASSWORD}
+        url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:local-lokitapi}
+        username: ${POSTGRES_USER:postgres}
+        password: ${POSTGRES_PASSWORD:local-password}
         driver-class-name: org.postgresql.Driver
-
     jpa:
         hibernate:
             ddl-auto: update
@@ -12,7 +11,8 @@ spring:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
                 format_sql: true
-                show_sql: true
+            jdbc:
+                time_zone: Asia/Seoul
         open-in-view: false
 
     docker:
@@ -22,8 +22,7 @@ spring:
 
 logging:
     level:
-        org.hibernate.SQL: DEBUG
-        org.hibernate.orm.jdbc.bind: TRACE
+        kr.co.lokit.api: DEBUG
 
 management:
     endpoints:
@@ -31,6 +30,3 @@ management:
             exposure:
                 include: "health"
             base-path: /actuator
-    endpoint:
-        health:
-            show-details: when-authorized
