--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,15 @@ spring:
     application:
         name: api
     profiles:
-        active: local, env
+        active: ${SPRING_PROFILES_ACTIVE}
+    jackson:
+        time-zone: Asia/Seoul
+
 server:
     servlet:
         context-path: /api/v1
+
+logging:
+    pattern:
+        console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+        file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
