setting: envelope json 규격 및 에러 코드/핸들링 추가
추가사항으로 api 버저닝 방식 수정으로 인프라 일부가 수정되었으며 validation 의존성을 추가했습니다.

--- a/infra/dev/Caddyfile
+++ b/infra/dev/Caddyfile
@@ -5,7 +5,7 @@ lokit.co.kr {
         }
 
     reverse_proxy localhost:8080 {
-                                     health_uri /api/v1/actuator/health
+                                     health_uri /api/actuator/health
                                      health_interval 10s
                                      health_timeout 5s
 
