--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,10 +5,11 @@ spring:
         active: ${SPRING_PROFILES_ACTIVE}
     jackson:
         time-zone: Asia/Seoul
+        default-property-inclusion: non_null
 
 server:
     servlet:
-        context-path: /api/v1
+        context-path: /api
 
 logging:
     pattern:
