--- a/.github/workflows/dev-cd.yaml
+++ b/.github/workflows/dev-cd.yaml
@@ -6,6 +6,7 @@ on:
         types:
             - completed
         branches: [ develop ]
+    workflow_call:
 
 env:
     AWS_REGION: ap-northeast-2
