--- a/.github/workflows/dev-ci.yaml
+++ b/.github/workflows/dev-ci.yaml
@@ -22,6 +22,7 @@ on:
             - '**.yaml'
             - '**/*.yaml'
     workflow_dispatch:
+    workflow_call:
 
 env:
     AWS_REGION: ap-northeast-2
