--- a/infra/.env.template
+++ b/infra/.env.template
@@ -1,7 +1,10 @@
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_DB=
+POSTGRES_PASSWORD=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
 SPRING_PROFILES_ACTIVE=
+JWT_SECRET=
+JWT_EXPIRATION=86400000
