--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -6,7 +6,7 @@ spring:
         driver-class-name: org.postgresql.Driver
     jpa:
         hibernate:
-            ddl-auto: update
+            ddl-auto: create-drop
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -34,6 +34,10 @@ management:
             exposure:
                 include: "health"
             base-path: /actuator
+
+jwt:
+    secret: ${JWT_SECRET:local-dev-jwt-secret-key-minimum-32-chars}
+    expiration: ${JWT_EXPIRATION:8640000}  # 24시간
 
 springdoc:
     api-docs:
