setting: codeRabbit branch 전체 설정

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -5,5 +5,5 @@ reviews:
     #모든 브랜치를 대상으로 자동 리뷰를 수행하고 싶을 때
     auto_review:
         enabled: true
-        target_branches:
-            - "*"
+        base_branches:
+            - ".*"
