--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
     application:
         name: api
     profiles:
-        active: ${SPRING_PROFILES_ACTIVE}
+        active: ${SPRING_PROFILES_ACTIVE:local}
     jackson:
         time-zone: Asia/Seoul
         default-property-inclusion: non_null
