--- a/infra/.env.template
+++ b/infra/.env.template
@@ -1,10 +1,21 @@
+# Database
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
+# Spring
 SPRING_PROFILES_ACTIVE=
 
+# JWT
 JWT_SECRET=
 JWT_EXPIRATION=
+JWT_REFRESH_EXPIRATION=
+
+# AWS
+AWS_REGION=
+AWS_S3_BUCKET=
+
+# CORS
+CORS_ALLOWED_ORIGINS=
