[setting] 카카오 api 키 설정 추가

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,8 +1,8 @@
 spring:
     datasource:
-        url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:local-lokitapi}
-        username: ${POSTGRES_USER:postgres}
-        password: ${POSTGRES_PASSWORD:local-password}
+        url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+        username: ${POSTGRES_USER}
+        password: ${POSTGRES_PASSWORD}
         driver-class-name: org.postgresql.Driver
     jpa:
         hibernate:
@@ -53,9 +53,13 @@ springdoc:
 
 aws:
     s3:
-        region: ${AWS_REGION:}
-        bucket: ${AWS_S3_BUCKET:}
+        region: ${AWS_REGION}
+        bucket: ${AWS_S3_BUCKET}
 
 cors:
     allowed-origins:
         - http://localhost:3000
+
+kakao:
+    api:
+        key: ${KAKAO_API_KEY}
