fix: 403 이슈 수정을 위한 profile 분기

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -55,6 +55,7 @@ springdoc:
         enabled: true
         path: /swagger
         display-request-duration: true
+        tags-sorter: alpha
     default-consumes-media-type: application/json
     default-produces-media-type: application/json
 
