--- a/.github/workflows/dev-ci.yaml
+++ b/.github/workflows/dev-ci.yaml
@@ -43,6 +43,7 @@ jobs:
                     reporter: java-junit
 
             -   name: Configure AWS credentials
+                if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
                 uses: aws-actions/configure-aws-credentials@v4
                 with:
                     aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
@@ -50,13 +51,16 @@ jobs:
                     aws-region: ${{ env.AWS_REGION }}
 
             -   name: Login to Amazon ECR
+                if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
                 id: login-ecr
                 uses: aws-actions/amazon-ecr-login@v2
 
             -   name: Set up Docker Buildx
+                if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
                 uses: docker/setup-buildx-action@v3
 
             -   name: Build & Push Docker Image
+                if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
                 env:
                     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
                     ECR_REPOSITORY: ${{ secrets.DEV_ECR_REPOSITORY }}
