fix: 요청에 albumId 없을 시 기본 앨범 사용하도록 구조 수정

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -72,10 +72,14 @@ cors:
 kakao:
     api:
         key: ${KAKAO_API_KEY:}
-    client-id: ${KAKAO_CLIENT_ID}
-    client-secret: ${KAKAO_CLIENT_SECRET}
-    redirect-uri: ${KAKAO_REDIRECT_URI}
-    front-redirect-uri: ${KAKAO_FRONT_REDIRECT_URI_LOCAL}
+    client-id: ${KAKAO_CLIENT_ID:}
+    client-secret: ${KAKAO_CLIENT_SECRET:}
+    redirect-uri: ${KAKAO_REDIRECT_URI:}
+    front-redirect-uri: ${KAKAO_FRONT_REDIRECT_URI_LOCAL:}
 
 cookie:
     secure: false
+
+discord:
+    webhook:
+        url: ${DISCORD_WEBHOOK_URL:}
