setting: login 쿠키 설정 수정

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -75,8 +75,8 @@ kakao:
 
 cookie:
     secure: true
+    domains: ${COOKIE_DOMAIN:}
 
 discord:
     webhook:
         url: ${DISCORD_WEBHOOK_URL:}
-
