setting: infra log directory

--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -1,17 +1,21 @@
 FROM eclipse-temurin:24-jre-alpine
 
-RUN apk add --no-cache tzdata && \
-    cp /usr/share/zoneinfo/Asia/Seoul /etc/localtime && \
-    echo "Asia/Seoul" > /etc/timezone && \
-    apk del tzdata
+RUN apk add --no-cache tzdata \
+    && cp /usr/share/zoneinfo/Asia/Seoul /etc/localtime \
+    && echo "Asia/Seoul" > /etc/timezone \
+    && apk del tzdata
 
+# non-root user
 RUN addgroup -S spring && adduser -S spring -G spring
 
 WORKDIR /app
 
+RUN mkdir -p /app/logs \
+    && chown -R spring:spring /app
+
 COPY --chown=spring:spring build/libs/*.jar app.jar
 
-USER spring:spring
+USER spring
 
 EXPOSE 8080
 
@@ -22,4 +26,4 @@ ENV JAVA_OPTS="-XX:+UseContainerSupport \
     -XX:+UseStringDeduplication \
     -Dfile.encoding=UTF-8"
 
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+ENTRYPOINT ["sh", "-c", "exec java $JAVA_OPTS -jar app.jar"]
