--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -49,6 +49,9 @@ jobs:
                 id: login-ecr
                 uses: aws-actions/amazon-ecr-login@v2
 
+            -   name: Build with Gradle
+                run: ./gradlew build -x test
+
             -   name: Build & Push Docker Image
                 if: github.event_name == 'push'
                 uses: docker/build-push-action@v6
