--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -64,6 +64,19 @@ jobs:
                     aws-secret-access-key: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
                     aws-region: ${{ env.AWS_REGION }}
 
+            -   name: Get Runner IP
+                id: ip
+                run: echo "runner_ip=$(curl -s https://checkip.amazonaws.com)" >> $GITHUB_OUTPUT
+
+            -   name: Add Runner IP to Security Group
+                run: |
+                    aws ec2 authorize-security-group-ingress \
+                        --group-id ${{ secrets.DEV_SECURITY_GROUP_ID }} \
+                        --protocol tcp \
+                        --port 22 \
+                        --cidr ${{ steps.ip.outputs.runner_ip }}/32 \
+                        --region ${{ env.AWS_REGION }} 2>/dev/null || true
+
             -   name: Login to Amazon ECR
                 id: login-ecr
                 uses: aws-actions/amazon-ecr-login@v2
@@ -95,9 +108,19 @@ jobs:
                         docker rm $CONTAINER_NAME || true
 
                         docker run -d \
-                          --name $CONTAINER_NAME \
-                          --restart unless-stopped \
-                          -p 8080:8080 \
-                          -e SPRING_PROFILES_ACTIVE=dev \
-                          -e TZ=Asia/Seoul \
-                          ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:dev-latest
+                            --name $CONTAINER_NAME \
+                            --restart unless-stopped \
+                            -p 8080:8080 \
+                            -e SPRING_PROFILES_ACTIVE=dev \
+                            -e TZ=Asia/Seoul \
+                            ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:dev-latest
+
+            -   name: Remove Runner IP from Security Group
+                if: always()
+                run: |
+                    aws ec2 revoke-security-group-ingress \
+                        --group-id ${{ secrets.DEV_SECURITY_GROUP_ID }} \
+                        --protocol tcp \
+                        --port 22 \
+                        --cidr ${{ steps.ip.outputs.runner_ip }}/32 \
+                        --region ${{ env.AWS_REGION }} 2>/dev/null || true
