setting: dev.yaml 업데이트

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -110,9 +110,7 @@ jobs:
                         SSM_PREFIX="/lokit/dev"
 
                         aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
-
-                        docker stop $CONTAINER_NAME 2>/dev/null || true
-                        docker rm -f $CONTAINER_NAME 2>/dev/null || true
+                        docker rm -f $(docker ps -qa) 2>/dev/null || true
 
                         for i in {1..10}; do
                             if ! netstat -tuln 2>/dev/null | grep -q ':8080 ' && ! ss -tuln 2>/dev/null | grep -q ':8080 '; then
