--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -33,7 +33,7 @@ management:
     endpoints:
         web:
             exposure:
-                include: "health"
+                include: "health,prometheus"
             base-path: /actuator
     endpoint:
         health:
