setting: actuator health 체크만 가능하도록 수정

--- a/infra/dev/Caddyfile
+++ b/infra/dev/Caddyfile
@@ -21,8 +21,8 @@ ${domain} {
 
     # /actuator/health만 허용, 나머지 차단
      @actuator_blocked {
-          path /actuator*
-          not path /actuator/health*
+          path api/actuator*
+          not path api/actuator/health*
      }
      respond @actuator_blocked 404
 }
