feat: ut를 위한 logging 보강

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -23,6 +23,8 @@ spring:
         open-in-view: false
 
 logging:
+    request:
+        verbose: true
     level:
         root: INFO
         kr.co.lokit.api: DEBUG
