--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -27,6 +27,8 @@ spring:
             enabled: false
 
 logging:
+    request:
+        verbose: true
     level:
         org.hibernate.SQL: DEBUG
         org.hibernate.orm.jdbc.bind: TRACE
