--- a/infra/dev/Caddyfile
+++ b/infra/dev/Caddyfile
@@ -1,5 +1,10 @@
 domain {
     encode zstd gzip
 
-    reverse_proxy /api/* localhost:8080
+    handle /api* {
+                     reverse_proxy 127.0.0.1:8080 {
+                                                      header_up X-Forwarded-Port {server_port}
+                                                      header_up X-Forwarded-Proto {scheme}
+                                                  }
+                 }
 }
