setting: memory enhance

--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -18,12 +18,10 @@ USER spring
 
 EXPOSE 8080
 
+# Dockerfile의 ENV JAVA_OPTS 수정
 ENV JAVA_OPTS="-XX:+UseContainerSupport \
-    -XX:+UseG1GC \
-    -Xms128m \
-    -Xmx256m \
-    -XX:MaxMetaspaceSize=200m \
-    -XX:MaxGCPauseMillis=200 \
+    -XX:MaxRAMPercentage=75.0 \
+    -XX:MaxMetaspaceSize=150m \
     -XX:+UseStringDeduplication \
     -XX:+ExitOnOutOfMemoryError \
     -Dfile.encoding=UTF-8"
