--- a/infra/dev/Caddyfile
+++ b/infra/dev/Caddyfile
@@ -3,7 +3,9 @@ domain {
 
     handle /api* {
                      reverse_proxy 127.0.0.1:8080 {
-                                                      header_up X-Forwarded-Port {server_port}
+                                                      header_up Host {host}
+                                                      header_up X-Real-IP {remote_host}
+                                                      header_up X-Forwarded-For {remote_host}
                                                       header_up X-Forwarded-Proto {scheme}
                                                   }
                  }
