--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,6 +4,13 @@ spring:
         username: ${POSTGRES_USER}
         password: ${POSTGRES_PASSWORD}
         driver-class-name: org.postgresql.Driver
+        hikari:
+            maximum-pool-size: 20
+            minimum-idle: 5
+            connection-timeout: 5000
+            idle-timeout: 600000
+            max-lifetime: 1800000
+            leak-detection-threshold: 30000
     jpa:
         hibernate:
             ddl-auto: update
