--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -23,6 +23,10 @@ spring:
             jdbc:
                 time_zone: Asia/Seoul
         open-in-view: false
+        defer-datasource-initialization: true
+    sql:
+        init:
+            mode: always
     task:
         execution:
             pool:
