--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -18,6 +18,10 @@ spring:
                 format_sql: true
                 show_sql: true
         open-in-view: false
+        defer-datasource-initialization: false
+    sql:
+        init:
+            mode: never
     docker:
         compose:
             enabled: false
