chore: cors log level

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -44,7 +44,7 @@ logging:
     level:
         root: INFO
         kr.co.lokit.api: DEBUG
-        kr.co.lokit.api.config.security: WARN
+        kr.co.lokit.api.config.security: INFO
 
 management:
     endpoints:
