--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -99,6 +99,10 @@ jobs:
                     ECR_REPOSITORY: ${{ secrets.DEV_ECR_REPOSITORY }}
                     CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
                     AWS_REGION: ${{ env.AWS_REGION }}
+                    proxy_timeout: 30s
+                    command_timeout: 10m
+                    script_stop: true
+                    debug: true
                 with:
                     host: ${{ secrets.DEV_EC2_HOST }}
                     username: ${{ secrets.DEV_EC2_USERNAME }}
