--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -63,6 +63,7 @@ aws:
         enabled: false
         region: ${AWS_REGION:}
         bucket: ${AWS_S3_BUCKET:}
+        public-base-url: ${AWS_S3_PUBLIC_BASE_URL:}
 
 kakao:
     api:
