setting: enable prod lifecycle alert

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -102,7 +102,7 @@ discord:
     webhook:
         url: ${DISCORD_WEBHOOK_URL:}
     lifecycle:
-        enabled: true
+        enabled: false
 
 admin.key: ${ADMIN_KEY:}
 
