--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -59,7 +59,7 @@ management:
     endpoints:
         web:
             exposure:
-                include: "health,info"
+                include: "health,info,prometheus,metrics"
             base-path: /actuator
     endpoint:
         health:
